<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="74dp"
        android:layout_height="36dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="26dp"
        android:text="@string/nombre"
        app:layout_constraintBottom_toTopOf="@+id/editTextNom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="74dp"
        android:layout_height="36dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="26dp"
        android:text="@string/apellido_paterno"
        app:layout_constraintBottom_toTopOf="@+id/editTextApeM"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="74dp"
        android:layout_height="36dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="53dp"
        android:layout_marginBottom="26dp"
        android:text="@string/apellido_materno"
        app:layout_constraintBottom_toTopOf="@+id/editTextApeP"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextNom"
        android:layout_width="93dp"
        android:layout_height="35dp"
        android:layout_marginStart="42dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="99dp" />

    <EditText
        android:id="@+id/editTextF"
        android:layout_width="137dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="235dp" />

    <EditText
        android:id="@+id/editTextE"
        android:layout_width="72dp"
        android:layout_height="45dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:layout_editor_absoluteX="199dp" />

    <EditText
        android:id="@+id/editTextApeM"
        android:layout_width="93dp"
        android:layout_height="35dp"
        android:layout_marginStart="27dp"
        android:layout_marginEnd="27dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/editTextApeP"
        app:layout_constraintStart_toEndOf="@+id/editTextNom"
        tools:layout_editor_absoluteY="99dp" />

    <EditText
        android:id="@+id/editTextApeP"
        android:layout_width="93dp"
        android:layout_height="35dp"
        android:layout_marginEnd="33dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="99dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="86dp"
        android:layout_height="35dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="13dp"
        android:text="@string/fecha_de_nacimineto"
        app:layout_constraintBottom_toTopOf="@+id/editTextF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNom" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:text="@string/estado"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        tools:layout_editor_absoluteY="191dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="158dp"
        android:onClick="onClick"
        android:text="@string/limpiar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="155dp"
        android:onClick="onClick2"
        android:text="@string/generar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginEnd="65dp"
        android:text="@string/genero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        tools:layout_editor_absoluteY="191dp" />

    <EditText
        android:id="@+id/editTextG"
        android:layout_width="61dp"
        android:layout_height="48dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="40dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextE"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textViewR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="167dp"
        tools:layout_editor_absoluteY="366dp" />

</androidx.constraintlayout.widget.ConstraintLayout>